@@ -57,6 +57,12 @@ options {
 	dns_fdlimit = 64;
 
 	/*
+	 * Amount of time the resolver waits until a response is received
+	 * from a name server.
+	 */
+	dns_timeout = 5 seconds;
+
+	/*
 	 * Put the full path and filename of a logfile here if you wish to log
 	 * every scan done. Normally HOPM only logs successfully detected
 	 * proxies in the hopm.log, but you may get abuse reports to your ISP
